src/styles/components/Navbar.module.scss
@import "src/styles/helpers/functions";
@import "src/styles/helpers/variables";
@import "src/styles/helpers/mixins";

.navWrapper {
  width: 100vw;
  height: rem(68);
  background-color: $color-primary;

  @include breakpoint(xl) {

  }
}

.navbar {
  background: $color-primary;
  padding: 0 rem(10);
  display: flex;
  justify-content: space-between;
  width: min(100%, rem(1920));
  margin: 0 auto;

  @include breakpoint(md) {
    align-items: center;
    display: grid;
    grid-template-areas: "nav logo icons";
  }
}

.navbarLogo {
  max-width: rem(64);
  color: $color-white;
  cursor: pointer;
  padding: rem(5) 0;

  & img {
    display: block;
    width: 100%;
  }

  @include breakpoint(md) {
    grid-area: logo;
  }
}

.navMenu {
  display: flex;
  justify-content: flex-end;
  list-style: none;
  text-align: center;
  margin-left: auto;

  @include breakpoint(md) {
    display: flex;
    flex-direction: column;
    width: 100%;
    position: absolute;
    top: rem(68);
    left: -100%;
    opacity: 1;
    transition: all 0.5s ease;

    &.active {
      background: $color-primary;
      left: 0;
      opacity: 1;
      transition: all 0.5s ease;
      z-index: 1;
    }
  }
}

.navLinksMobile {
  display: none;

  @include breakpoint(md) {
    display: block;
    text-align: center;
    padding: rem(24);
    margin: rem(32) auto;
    border-radius: rem(4);
    width: 80%;
    background: $color-dark-primary;
    text-decoration: none;
    color: $color-white;

    &:hover {
      background: $color-white;
      color: $color-dark-primary;
      transition: 250ms;
    }
  }
}

.menuIcon {
  display: none;

  @include breakpoint(md) {
    grid-area: nav;
    display: block;
    cursor: pointer;
  }
}

.icons {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 100%;
  padding: rem(21) 0;

  @include breakpoint(md) {
    grid-area: icons;
  }
}

.iconContainer {
  height: 100%;
  width: rem(40);
  display: flex;
  justify-content: center;
  align-items: center;
  margin-left: rem(10);

  & img {
    width: min(100%, rem(26));
    
    &:hover {
      cursor: pointer;
    }
  }
}

.active {
}

